# distance_explainer

./: .bumpversion.cfg  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  next_steps.md  project_setup.md  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties  tutorial.ipynb
.githooks/: pre-commit
.github/actions/install-test-and-build/: action.yml
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  cffconvert.yml  documentation.yml  release.yml  sonarcloud.yml
distance_explainer/: __init__.py  config.py  distance.py  my_module.py
docs/: CONTRIBUTING.md  Makefile  README.dev.md  conf.py  index.md  index.rst  make.bat
src/: distance_explainer.py
tests/: __init__.py  config.py  test_distance.py  test_my_module.py
tests/test_data/: test_dummy_data_exact_expected_output.npz  test_dummy_data_exact_expected_output_neg_empty.npz  test_dummy_data_exact_expected_output_pos_empty.npz  test_runs_with_dummy_exact_output.npz
