[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distance_explainer"
version = "0.5.1"
description = "XAI method to explain distances in embedded spaces"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Christiaan Meijer", email = "c.meijer@esciencecenter.nl"},
    {name = "Patrick Bos", email = "e.g.p.bos@rug.nl"},
]
keywords = ["XAI", "embedded spaces"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dianna>=1.8",
    "numpy>=1.22",
    "tqdm>=4.62",
    "scikit-learn>=1.1",
]

[project.urls]
Homepage = "https://github.com/dianna-ai/distance_explainer"
"Bug Tracker" = "https://github.com/dianna-ai/distance_explainer/issues"
Documentation = "https://dianna-ai.github.io/distance_explainer/"

[project.optional-dependencies]
dev = [
    "build",
    "bump-my-version",
    "coverage[toml]",
    "dataclass_wizard[yaml]>=1.0",
    "ruff",
    "pytest>=7.0",
    "pytest-cov",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autoapi",
    "tox",
    "myst_parser",
]
publishing = [
    "twine",
    "wheel",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["distance_explainer"]

[tool.setuptools.data-files]
"." = ["CITATION.cff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bumpversion]
current_version = "0.5.1"

[[tool.bumpversion.files]]
filename = "src/distance_explainer.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: \"{current_version}\""
replace = "version: \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "date-released: \\d{{4}}-\\d{{2}}-\\d{{2}}"
replace = "date-released: {now:%Y-%m-%d}"
regex = true

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.coverage.run]
branch = true
source = ["distance_explainer"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle (error)
    "W",    # pycodestyle (warning)
    "I",    # isort
    "D",    # pydocstyle
]
ignore = [
    'D100',  # Missing module docstring
    'D203',
    'D204',
    'D213',
    'D215',
    'D400',
    'D401',
    'D404',
    'D406',
    'D407',
    'D408',
    'D409',
    'D413',
]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tutorial.ipynb" = ["E731", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["distance_explainer"]
force-single-line = true
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]

[tool.ruff.format]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "scripts",
]
