# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Christiaan Meijer
author_email = c.meijer@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
description = XAI method to explain distances in embedded spaces
keywords =
    XAI
    embedded spaces
long_description = file: README.md
long_description_content_type = text/markdown
name = distance_explainer
project_urls =
    Bug Tracker = https://github.com/dianna-ai/distance_explainer/issues
url = https://github.com/dianna-ai/distance_explainer
version = 0.5.0

[options]
python_requires = >=3.10
install_requires =
    dianna>=1.8
    numpy>=1.22
    tqdm>=4.62
    scikit-learn>=1.1

[options.extras_require]
dev =
    build
    bump2version
    coverage [toml]
    dataclass_wizard[yaml]>=1.0
    ruff
    pytest>=7.0
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel
